<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_product"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/add_product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_design"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/add_product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_gravity="center_vertical|center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/addIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/baseline_add_24"
                android:contentDescription="@string/product_name" />

        </FrameLayout>

        <EditText
            android:id="@+id/add_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:background="@drawable/edittext_design"
            android:minHeight="48dp"
            android:padding="6dp"
            android:layout_margin="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_design"
            android:minHeight="48dp"
            android:padding="6dp"
            android:hint="@string/product_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/add_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/edittext_design"
            android:minHeight="48dp"
            android:padding="6dp"
            android:inputType="textMultiLine"
            android:lines="4" />

        <Button
            android:id="@+id/add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="Add Product" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>