<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

        <!-- Top Search Bar and User Icon -->
        <LinearLayout
            android:id="@+id/topBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <SearchView
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="0.8"
                android:background="@drawable/searchbar_design"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:padding="6dp" />

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="6dp"
                android:padding="8dp"
                android:src="@drawable/profile" />

        </LinearLayout>

        <!-- Recommended Text -->
        <TextView
            android:id="@+id/recommendedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBarLayout"
            android:padding="16dp"
            android:text="@string/recommended"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendedText"
            android:padding="8dp" />

        <HorizontalScrollView
            android:id="@+id/categoriesScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendedRecyclerView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/category_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/cardview_border"
                    android:text="@string/all"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/category_agriculture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/cardview_border"
                    android:padding="14dp"
                    android:text="@string/agriculture"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/category_Electronics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/cardview_border"
                    android:padding="14dp"
                    android:text="@string/electronics"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/category_garments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/cardview_border"
                    android:padding="14dp"
                    android:text="@string/garments"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/category_electrial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/cardview_border"
                    android:text="@string/electrical"
                    android:textColor="@color/white" />


            </LinearLayout>
        </HorizontalScrollView>

        <!-- RecyclerView for Items in Selected Category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoriesScrollView"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryItemsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>


    </RelativeLayout>
</layout>
